force-app/main/default/objects/IntegrationLog__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Data de Execução</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>