force-app/main/default/objects/IntegrationLog__c/fields/ExternalIds__c.field-meta.xml
<CustomField>
    <fullName>ExternalIds__c</fullName>
    <description>Comcatenação de códigos para fácil localização do Log de Integração</description>
    <externalId>true</externalId>
    <label>Códigos Externos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>