force-app/main/default/objects/IntegrationLog__c/fields/HasAttachment__c.field-meta.xml
<CustomField>
    <fullName>HasAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Devido a quantidade de dados no payload, é necessário um anexo?</description>
    <inlineHelpText>Devido a quantidade de dados no payload, é necessário um anexo?</inlineHelpText>
    <label>Possui Anexo</label>
    <type>Checkbox</type>
</CustomField>