force-app/main/default/objects/IntegrationLog__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>Nome da integração que deu origem a este log</description>
    <inlineHelpText>Nome da integração que deu origem a este log</inlineHelpText>
    <label>Integração</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>