force-app/main/default/objects/IntegrationLog__c/fields/PayloadIN__c.field-meta.xml
<CustomField>
    <fullName>PayloadIN__c</fullName>
    <description>Payload com informações de entrada</description>
    <inlineHelpText>Payload com informações de entrada</inlineHelpText>
    <label>Payload IN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>