force-app/main/default/objects/IntegrationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>OK/Erro</description>
    <inlineHelpText>OK/Erro</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>Erro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>