force-app/main/default/objects/IntegrationLog__c/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <label>Inbound</label>
</RecordType>